--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -30,6 +30,12 @@
     }
 }
 
+@media(max-width: 720px) {
+    html {
+        font-size: 87.5%;
+    }
+}
+
 body {
     background: var(--background);
     color: var(--text);
@@ -46,44 +52,4 @@ button {
 a {
     text-decoration: none;
     color: inherit;
-}
-
-.container {
-    height: 100vh;
-    max-width: 992px;
-    margin: 0 auto;
-    padding: 2.5rem 2rem;
-    
-    display: flex;
-    flex-direction: column;
-}
-
-.experience-bar {
-    display: flex;
-    align-items: center;
-}
-
-.experience-bar span {
-    font-size: 1rem;
-}
-
-.experience-bar > div {
-    flex: 1; /* ocupar largura maxima do conteiner */
-    height: 4px;
-    border-radius: 4px;
-    background: var(--gray-line);
-    margin: 0 1.5rem;
-    position: relative;
-}
-
-.experience-bar > div > div {
-    height: 4px;
-    border-radius: 4px;
-    background: var(--green);
-}
-
-span.current-experience {
-    position: absolute;
-    top: 12px;
-    transform: translateX(-50%);
 }
