--- a/src/styles/components/Countdown.module.css
+++ b/src/styles/components/Countdown.module.css
@@ -1,12 +1,12 @@
 .countdownContainer {
     display: flex;
     align-items: center;
-    font-family: Rajdhani,sans-serif;
+    font-family: Rajdhani, sans-serif;
     font-weight: 600;
     color: var(--title);
 }
 
-.countdownContainer > div {
+.countdownContainer>div {
     flex: 1;
 
     display: flex;
@@ -19,20 +19,21 @@
     font-size: 8.5rem;
 }
 
-.countdownContainer > div  span {
+.countdownContainer>div span {
     flex: 1;
     display: flex;
     justify-content: center;
 }
 
-.countdownContainer > div  span:first-child {
+.countdownContainer>div span:first-child {
     border-right: 1px solid #f0f1f3;
 }
-.countdownContainer > div  span:last-child {
+
+.countdownContainer>div span:last-child {
     border-left: 1px solid #f0f1f3;
 }
 
-.countdownContainer > span {
+.countdownContainer>span {
     font-size: 6.25rem;
     margin: 0.5rem;
 }
@@ -51,13 +52,29 @@
     border-radius: 5px;
     background: var(--blue);
     color: var(--white);
-    
+
     font-size: 1.25rem;
     font-weight: 600;
 
     transition: background-color 0.3s;
 }
 
-.countdownButton:hover { 
+.countdownButton:not(:disabled):hover {
     background: var(--blue-dark);
+}
+
+.countdownButtonActive {
+    background: var(--white);
+    color: var(--title)
+}
+
+.countdownButtonActive:not(:disabled):hover {
+    background: var(--red);
+    color: var(--white)
+}
+
+.countdownButton:disabled {
+    background: var(--white);
+    color: var(--text);
+    cursor: not-allowed;
 }
